cluster/workloads/sock-shop/sock-shop-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop
  labels:
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
