cluster/workloads/sock-shop/rabbitmq-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
  namespace: sock-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: rabbitmq
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.6.8-management
          ports:
            - containerPort: 15672
              name: management
            - containerPort: 5672
              name: rabbitmq
          securityContext:
            capabilities:
              drop:
                - all
              add:
                - CHOWN
                - SETGID
                - SETUID
                - DAC_OVERRIDE
            readOnlyRootFilesystem: true
        - name: rabbitmq-exporter
          image: kbudde/rabbitmq-exporter:latest
          ports:
            - containerPort: 9090
              name: exporter
      nodeSelector:
        beta.kubernetes.io/os: linux
