cluster/workloads/sock-shop/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
  namespace: sock-shop
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8079
  selector:
    name: front-end
