cluster/workloads/sock-shop/sock-shop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sock-shop
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sock-shop.k8s.aws-test.jakob.soy
      http:
        paths:
          - backend:
              serviceName: front-end
              servicePort: 80
